2007-03-06  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* queryStatement.c, queryParser.y: 
	Fixed 1674999: fixed memory corruption and leak in query statement.

2007-03-05  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* queryLexer.l:
	Fixed 1370752: added single quotes to lexer definition.

	* predicate.c, providerDrv.c, queryOperation.c, selectexp.c,
	subcond.c:
	Fixed 1370764: parser unstable after syntax error.

2007-03-01  Tyrel Datwyler <tyreld@us.ibm.com>

	* sfcb-dox.conf.in, configure.ac, Makefile.am, support.h, support.c
	Partially fixed 1672034: Added support for documentation generation, 
	and initial documentation of memory managment facilities. 

2007-03-01  Sven Schuetz

	* instance.c, providerRegister.c, interopProvider.c, queryStatement.c:
	Fixed 1668852: memory leak in interop provider
	
	* cimXmlRequest.c, instance.c:
	Fixed 1654313: http adapter segfaults on createinstance

2007-02-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* Makefile.am: 
	Post-Fix for 1665255: added objectpath.h to source file list.

2007-02-26  Sven Schuetz

	* providerDrv.c, providerRegister.c, providerRegister.h:
	Fixed 1664992: interopProvider segfaults with provider-grouping
	
	* providerRegister.c:
	Fixed 1669192: new providerregistration causes problems

2007-02-22  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* providerDrv.c: 
	Fixed 1666311: Added support for old-style indication providers.

2007-02-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* support.c: 
	Fixed 1666258: Memory corruption in thread cleanup fixed.
	The memUnlinkEncObj function is skipping the actual unlinking step
	if the thread specific data containing the managed_thread structure
	could not be found - in which case unlinking wouldn't make much
	sense either. 

	* configure.ac, README, sfcb.cfg.pre.in:
	Amended 1660634: added README section and enhanced config defaults.
	