@@ -121,7 +121,10 @@ typedef struct _buffer {
 #endif
 } Buffer;
 
-//#define INET6
+#ifdef HAVE_IPV6
+ #define USE_INET6
+#endif
+
 //#define USE_THREADS
 //for use by the process thread in handleHttpRequest()
 struct processThreadParams {
@@ -1260,11 +1263,13 @@ static void handleHttpRequest(int connFd)
 
 int httpDaemon(int argc, char *argv[], int sslMode, int sfcbPid)
 {
-#ifdef INET6
+
+#ifdef USE_INET6
    struct sockaddr_in6 sin;
 #else
    struct sockaddr_in sin;
 #endif
+
    socklen_t sz,sin_len;
    int i,ru;
    char *cp;
@@ -1361,9 +1366,13 @@ int httpDaemon(int argc, char *argv[], int sslMode, int sfcbPid)
      mlogf(M_INFO,M_SHOW,"--- Maximum requests per connection: %ld\n",keepaliveMaxRequest);
    }
 
-#ifdef INET6
+#ifdef USE_INET6
    listenFd = socket(PF_INET6, SOCK_STREAM, IPPROTO_TCP);
-#else 
+   if (listenFd < 0) { 
+       mlogf(M_INFO,M_SHOW,"--- Using IPv4 address\n");
+       listenFd = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
+   }
+#else
    listenFd = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
 #endif
 
@@ -1374,7 +1383,7 @@ int httpDaemon(int argc, char *argv[], int sslMode, int sfcbPid)
 
    bzero(&sin, sin_len);
 
-#ifdef INET6
+#ifdef USE_INET6
    sin.sin6_family = AF_INET6;
    sin.sin6_addr = in6addr_any;
    sin.sin6_port = htons(port);
@@ -1382,7 +1391,7 @@ int httpDaemon(int argc, char *argv[], int sslMode, int sfcbPid)
    sin.sin_family = AF_INET;
    sin.sin_addr.s_addr = INADDR_ANY;
    sin.sin_port = htons(port);
-#endif
+#endif 
 
    if (bind(listenFd, (struct sockaddr *) &sin, sin_len) ||
        listen(listenFd, 0)) {
