@@ -1,3 +1,10 @@
+2007-03-09  Chris Buccella  
+
+	* httpAdapter.c, configure.ac, README
+	Fixed 1672704: IPv6 support.  This is a configure option.
+	Enabling this feature without having an IPv6 address available
+	will default to IPv4.
+
 2007-03-06  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
 	* queryStatement.c, queryParser.y: 
